--- a/test.tex
+++ b/test.tex
@@ -1,28 +1,16 @@
 \documentclass[preview]{standalone}
 
 \usepackage[english]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{dsfont}
-\usepackage{setspace}
-\usepackage{tipa}
-\usepackage{relsize}
-\usepackage{textcomp}
-\usepackage{mathrsfs}
-\usepackage{calligra}
-\usepackage{wasysym}
-\usepackage{ragged2e}
-\usepackage{physics}
-\usepackage{xcolor}
-\usepackage{microtype}
-\DisableLigatures{encoding = *, family = * }
-\linespread{1}
+
+
+\usepackage[T1]{fontenc}
+\usepackage[default]{frcursive}
+\usepackage[eulergreek,noplusnominus,noequal,nohbar,%
+nolessnomore,noasterisk]{mathastext}
 
 \begin{document}
 
-\begin{align*}
-x-x_1
-\end{align*}
+\centering Hello \LaTeX
 \end{document}
